# ez-petri

./: Cargo.toml  README.md  TODO.org  bootstrap.js  package-lock.json  package.json  shell.nix  webpack.config.js
src/: app.rs  editor.rs  graph.rs  lib.rs  math.rs  petri.rs  plot.rs  ssa.rs
static/: index.html  skeleton.css
