[package]
name = "petri-net-wasm"
version = "0.1.0"
authors = ["Owen Lynch"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = { version = "^0.2", features = [ "serde-serialize" ] }
yew = "0.10"
plotters = "0.2.12"
serde = { version = "1.0.103", features = ["derive"] }
ndarray = { version = "0.13.0", features = ["serde"] }
stdweb = "0.4.20"
serde_json = "*"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
wee_alloc = { version = "0.4.4", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"
